now aligns more with running records

--- a/src/index.html
+++ b/src/index.html
@@ -2,22 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>PlantPlanner</title>
+  <title>Running Records</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!-- Angular Material Dependencies -->
-<link rel="stylesheet" href="./bower_components/angular-material/angular-material.min.css">
-<script src="./bower_components/angular/angular.min.js"></script>
-<script src="./bower_components/angular-animate/angular-animate.min.js"></script>
-<script src="./bower_components/angular-aria/angular-aria.min.js"></script>
-<script src="./bower_components/angular-material/angular-material.min.js"></script>
-<!-- Angular Material Fileinput -->
-<link rel="stylesheet" href="./bower_components/lf-ng-md-file-input/dist/lf-ng-md-file-input.css">
-<script src="./bower_components/lf-ng-md-file-input/dist/lf-ng-md-file-input.js"></script>
 </head>
 <body class="mat-typography">
   <app-root></app-root>
